testing/tests/melt/negative/lvalues_4.c

int main() 
{
    int n = 0;
    ++n = 2; // The ++ prefix operator converts an lvalue to an rvalue. 
    return 0;
}
